--- a/src/package.json
+++ b/src/package.json
@@ -4,24 +4,34 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": " mocha --require babel-polyfill --require babel-register ./tests/cars.test.js --timeout 1500 --exit",
     "start": "babel-watch server.js "
   },
   "author": "Parfait",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.0"
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "express": "^4.17.0",
+    "joi": "^14.3.1",
+    "mocha": "^6.1.4",
+    "moment": "^2.24.0",
+    "nyc": "^14.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-watch": "^7.0.0",
+    "bcrypt": "^3.0.6",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
