--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": " mocha --require babel-polyfill --require babel-register ./tests/cars.test.js --timeout 1500 --exit",
+    "test": " nyc mocha --require @babel/register \"./tests/*.js\" --timeout 1500 --exit",
     "start": "babel-watch server.js "
   },
   "author": "Parfait",
@@ -25,18 +25,20 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.4",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
     "babel-watch": "^7.0.0",
     "bcrypt": "^3.0.6",
+    "coveralls": "^3.0.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0"
   }
 }
