--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "Parfait",
   "license": "ISC",
   "dependencies": {
-    "babel-watch": "^7.0.0",
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
@@ -21,11 +20,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-watch": "^7.0.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "express": "^4.17.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.1.4",
     "moment": "^2.24.0",
     "nyc": "^14.1.1",
