--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "istanbul": "^0.4.5",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.0"
   }
