--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,4 @@ node_js:
 cache:
   directories:
     - "node_modules"
-after_success:
-  - ./node_modules/.bin/jscoverage lib lib-cov
-  - ./node_modules/.bin/mocha YOUR_TESTS/**.js -R mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js
+after_success: npm run coverage
