--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon --exec babel-node --presets env app",
     "heroku": "babel-watch ./server.js",
     "test": "nyc mocha --require @babel/register \"./src/tests/*.js\" --timeout 1500 --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "start": "babel-watch ./server.js "
+    "delete": "node --require  @babel/register models/tables tablesDelete",
+    "create": "node --require  @babel/register ./src/models/tables tablesCreate"
   },
   "author": "Parfait",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "babel-watch": "^7.0.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -29,20 +32,26 @@
     "express": "^4.17.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
+    "make-runnable": "^1.3.6",
     "mocha": "^6.1.4",
     "moment": "^2.24.0",
+    "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
+    "pg": "^7.11.0",
+    "pg-promise": "^8.7.2",
+    "underscore": "^1.9.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "coveralls": "^3.0.4",
+    "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "istanbul": "^0.4.5",
-    "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^1.19.0"
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
