Feature(post car) post a car api [Finishes#166779827]

--- a/.babelrc
+++ b/.babelrc
@@ -3,8 +3,8 @@
     [
       "env",
       {
-        "target": {
-          "node": true
+        "targets": {
+          "node": "current"
         }
       }
     ]
