--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node --presets env app",
+    "start": "npm run initTables && nodemon --exec babel-node --presets env app",
     "heroku": "babel-watch ./server.js",
     "test": "nyc mocha --require @babel/register \"./src/tests/*.js\" --timeout 1500 --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "delete": "node --require  @babel/register models/tables tablesDelete",
-    "create": "node --require  @babel/register ./src/models/tables tablesCreate"
+    "initTables": "babel-node ./src/models/tables"
   },
   "author": "Parfait",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "7.4.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "7.4.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -44,6 +45,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.4.5",
     "coveralls": "^3.0.4",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
