--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,1 @@
-{
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "node": "current"
-        }
-      }
-    ]
-  ]
-}
+{ "presets": ["@babel/preset-env"] }
