--- a/package.json
+++ b/package.json
@@ -1,59 +1,57 @@
 {
-  "name": "src",
+  "name": "automart",
   "version": "1.0.0",
-  "description": "",
+  "description": "Auto Mart is a car dealership app, where user come to sell or buy cars easly and efficiently",
   "main": "app.js",
   "scripts": {
-    "start": "npm run initTables && nodemon --exec babel-node --presets env app",
-    "heroku": "babel-watch ./server.js",
-    "test": "nyc mocha --require @babel/register \"./src/tests/*.js\" --timeout 1500 --exit",
+    "db:migrate": "babel-node ./src/models/db/schema.js",
+    "db:seed": "babel-node ./src/models/db/seeder.js",
+    "db:populate": "npm run db:migrate && npm run db:seed",
+    "test": "npm run db:populate && nyc --reporter=html --reporter=text --cache mocha ./src/test --require @babel/polyfill --require @babel/register --recursive --no-timeout --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "initTables": "babel-node ./src/models/tables"
+    "lint": "eslint --fix src/",
+    "dev-start": "babel-watch app.js",
+    "start": "babel-node app.js"
   },
-  "author": "Parfait",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nparfait101"
+  },
+  "author": "Parfait Ntagungira",
+  "license": "MIT",
   "dependencies": {
-    "@babel/core": "7.4.5",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "7.4.4",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
+    "@babel/preset-env": "^7.4.4",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-watch": "^7.0.0",
     "bcrypt": "^3.0.6",
-    "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
-    "express": "^4.17.0",
-    "joi": "^14.3.1",
+    "cloudinary": "^1.14.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "jwt-simple": "^0.5.6",
-    "make-runnable": "^1.3.6",
-    "mocha": "^6.1.4",
-    "moment": "^2.24.0",
-    "nodemon": "^1.19.1",
-    "nyc": "^14.1.1",
+    "mailgun-js": "^0.22.0",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "pg": "^7.11.0",
-    "pg-promise": "^8.7.2",
-    "underscore": "^1.9.1",
-    "uuid": "^3.3.2"
+    "regenerator-runtime": "^0.13.2",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.4.5",
-    "coveralls": "^3.0.4",
-    "dotenv": "^8.0.0",
+    "babel-plugin-istanbul": "^5.1.4",
+    "babel-watch": "^7.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.0.3",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "istanbul": "^0.4.5",
-    "mocha-lcov-reporter": "^1.3.0"
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1"
+  },
+  "engines": {
+    "node": "10.15.1"
   }
 }
