--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,9 @@ node_js:
 cache:
   directories:
     - "node_modules"
+  services:
+- postgresql
+before_script:
+- psql -c 'create database auto-mart;' -U postgres
+- psql -c "CREATE USER root WITH PASSWORD 'password';" -U postgres
 after_success: npm run coverage
